--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+*
+{
+    margin: 0px 0px;
+    padding: 0px 0px ;
+    box-sizing: border-box;
+   }
+body
+{
+    font-family: 'Ubuntu', sans-serif;
+    text-align: justify;
+    background-color:  #F0FFF0;
+}
