--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,6 @@
  <router-outlet></router-outlet>
 <!-- <app-usertable></app-usertable> -->
 <div class="d-flex justify-content-end container ">
-<button class="btn btn-primary " >Add New User </button>
+<button class="btn btn-primary " (click)="onBtnClick()" >Add New User </button>
 </div>
 <!-- <app-addnewuser></app-addnewuser> -->
