--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 <div class="container mt-3">
      <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
              <img src="assets/logo.png " class=" rounded-5" style="width: 75px;"  alt="Image Not Found">
         </div>
-        <div class="col-md-6 ">
+        <div class="col-md-8 ">
              
-                 <a routerLink="EmployeeList" class="px-5 text-decoration-none">Employee List</a>
-                <a routerLink="MedicalDetails" class="text-decoration-none">Employees Medical Details</a>
+                 <a routerLink="EmployeeList" class="px-3 text-decoration-none">Employee List</a>
+                <a routerLink="MedicalDetails" class="px-5 text-decoration-none">Employees Medical Details</a>
+                <a routerLink="Charts" class="text-decoration-none">Charts</a>
             
         </div>
      </div>
