--- a/src/app/addnewuser/addnewuser.component.html
+++ b/src/app/addnewuser/addnewuser.component.html
@@ -13,7 +13,7 @@
      <select class="form-select"  #select="ngModel" [class.is-invalid]="select.touched && select.invalid" aria-label="Default select example" name="sports"  required  ngModel>
         <option selected>Select</option>
         <option value="1" >One</option>
-        <option value="2" l>Two</option>
+        <option value="2" >Two</option>
         <option value="4"  >Three</option>
       </select>
       <button type="button" class="btn btn-secondary mt-5 mx-2  ">Close</button>
