--- a/src/app/usertable/usertable.component.html
+++ b/src/app/usertable/usertable.component.html
@@ -13,7 +13,7 @@
             <th scope="col">DOB</th>
             <th scope="col">Actions</th>
           </tr>
-          <tr *ngFor="let p of posts">
+          <tr *ngFor="let p of posts; let i as index">
               <th>{{p.id}}</th>
               <td> <img src="{{p.imageUrl}}" alt="Image not found" width="40px"></td>
               <td>{{p.firstName}}</td>
@@ -23,11 +23,11 @@
               <td>{{p.contactNumber}}</td>
           
               <td>{{p.dob}}</td>
-              <td> <a  href=""> <img src="/assets/edit.png" alt="" width="30px" (click)=" onBtnClick()" > </a></td>
+              <td> <a routerLink="/EmployeeList/addnewuser"> <img src="/assets/edit.png" alt="" width="30px" (click)=" onBtnClick()" > </a></td>
         
               <!-- <router-outlet></router-outlet> -->
            <!-- <td> <button routerLink="addnewuser">Delete </button></td> -->
-              <td> <a href=""><img src="/assets/delete.png" alt="" width="30px"> </a></td>
+              <td> <a routerLink="" (click)="delete(i);"><img src="/assets/delete.png" alt="" width="30px"> </a></td>
           </tr>
         </thead>
       
