--- a/src/app/usertable/usertable.component.html
+++ b/src/app/usertable/usertable.component.html
@@ -23,11 +23,11 @@
               <td>{{p.contactNumber}}</td>
           
               <td>{{p.dob}}</td>
-              <td> <a routerLink="/EmployeeList/addnewuser"> <img src="/assets/edit.png" alt="" width="30px" (click)=" onBtnClick()" > </a></td>
+              <td> <a > <img src="/assets/edit.png" alt="" width="30px" (click)=" onBtnClick()" > </a></td>
         
               <!-- <router-outlet></router-outlet> -->
            <!-- <td> <button routerLink="addnewuser">Delete </button></td> -->
-              <td> <a routerLink="" (click)="delete(i);"><img src="/assets/delete.png" alt="" width="30px"> </a></td>
+              <td> <a  (click)="delete(i);"><img src="/assets/delete.png" alt="" width="30px"> </a></td>
           </tr>
         </thead>
       
