App component changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="col-md-8 ">
              
-                 <a routerLink="EmployeeList" class="px-3 text-decoration-none">Employee List</a>
+                 <a routerLink="EmployeeList" class="px-3 text-decoration-none">Employee List Details</a>
                 <a routerLink="MedicalDetails" class="px-5 text-decoration-none">Employees Medical Details</a>
                 <a routerLink="Charts" class="text-decoration-none">Charts</a>
             
