Handa removed from Charts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
              
                  <a routerLink="EmployeeList" class="px-3 text-decoration-none">Employee Handa List Details</a>
                 <a routerLink="MedicalDetails" class="px-5 text-decoration-none">Employees Medical Details</a>
-                <a routerLink="Charts" class="text-decoration-none">Handa  Charts</a>
+                <a routerLink="Charts" class="text-decoration-none"> Charts</a>
             
         </div>
      </div>
